--- a/mobile/src/main/res/layout/headline_layout.xml
+++ b/mobile/src/main/res/layout/headline_layout.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
+
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:id="@+id/headline"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="8dp"
+        android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingRight="8dp"
         android:paddingTop="8dp"
+        android:layout_below="@id/image_view"
         tools:text="Sample Headline!" />
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="8dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="8dp"
+        android:layout_below="@id/headline"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
 
 
